--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Font awesome CSS -->
     <link rel="stylesheet" href="css/font-awesome.min.css">
 
-    <title>Hello, world!</title>
+    <title>Muncak | Home</title>
   </head>
   <body>
     <section class="bg">
