--- a/index.html
+++ b/index.html
@@ -122,6 +122,138 @@
     			</div>
     		</div>	
     	</section>
+    	<section class="protecting">
+    		<div class="container">
+    			<div class="row">
+    				<div class="col-md-12">
+    					<h2>Protecting Trails: Current News and Issues</h2>
+    				</div>
+    			</div>
+    			<div class="row">
+    				<div class="col-md-4">
+    					<div class="card" style="width: 18rem;">
+  							<img src="images/l1.png" class="card-img-top" alt="...">
+							<div class="card-body">
+							   	<h5 class="card-title">2,802 Miles of Trail to <br/> be Improved on <br/> International Trails Day</h5>
+							    <p class="card-text">On June 2, 2018, people across <br/> the worldwill come together to <br/> collectively improve 2,802 miles of <br/> trail—the distance across the <br/> world—during International <br/> Trails Day. Muncak invites hikers, cyclists,…</p>
+							    <a href="#" class="btn btn-primary">Read More</a>
+							</div>
+						</div>
+    				</div>
+    				<div class="col-md-4">
+    					<div class="card" style="width: 18rem;">
+  							<img src="images/l2.png" class="card-img-top" alt="...">
+							<div class="card-body">
+							   	<h5 class="card-title">Four Ways to Celebrate <br/> International Trails <br/> Day on a Bicycle</h5>
+							    <p class="card-text">There are many ways to <br/> celebrate the International Trails <br/> Day on June 2. It’s even possible <br/> to participate on a bicycle. And if <br/> you go on a bike overnight trip <br/> during International Trails <br/> Dayyou will simultaneously…</p>
+							    <a href="#" class="btn btn-primary">Read More</a>
+							</div>
+						</div> 
+    				</div>
+    				<div class="col-md-4">
+    					<div class="card" style="width: 18rem;">
+  							<img src="images/l3.png" class="card-img-top" alt="...">
+							<div class="card-body">
+							   	<h5 class="card-title">Millennials are the Future of our Trails</h5>
+							    <p class="card-text">The smell of fresh dew is a <br/> welcome scent, as the crunch of <br/> my boots melds with the sound of <br/> the birds singing their morning <br/> song. It’s early and I am wearing <br/> layers, but it won’t be long until <br/> they are peeled away to adapt to <br/> the summer…</p>
+							    <a href="#" class="btn btn-primary">Read More</a>
+							</div>
+						</div>
+    				</div> 
+    			</div>
+    		</div>
+    	</section>
+    	<section class="receive">
+    		<div class="container">
+    			<div class="row">
+    				<div class="col-md-12">
+    					<h2>Receive the latest updates on how to protect trails. <br/> Subscribe to the monthly edition of Paperless Trails.</h2>
+    				</div>
+    			</div>
+    			<div class="row">
+    				<div class="col-md-12">
+    					<form class="form">
+						  	<div class="form-group">
+						  		<input type="name" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Name">
+						  	</div>
+						  	<div class="form-group">
+						    	<input type="email" class="form-control" id="exampleInputPassword1" placeholder="Email Address">
+						  	</div>
+						  	<a class="btn btn-info" href="#">Subscribe</a>
+						</form>
+    				</div>
+    			</div>
+    		</div>
+    	</section>
+    	<section class="footer-widget">
+    		<div class="container">
+    			<div class="row">
+    				<div class="col-md-11">
+    					<div class="inner-widget">
+    						<div class="col-sm-2 contact">
+    							<h5>CONTACT US <br/> <br/> </h5>
+    							<p>Muncak hiking society <br/>
+								8605 Second Ave. <br/>
+								Silver Spring, MD 20910 <br/> <br/>
+							 
+								Info@muncak.org <br/>
+								1-301-565-6704 (Main) <br/>
+								1-800-972-8608 (Toll-free)</p>
+    						</div>
+    						<div class="col-sm-2 about">
+    							<h5>ABOUT US <br/> <br/> </h5>
+    							<p><a href="">Our Mission </a> <br/> 
+    							<a href="">Our Team </a><br/>
+    							<a href="">Corporate Sponsor </a><br/>
+    							<a href="">Financials </a><br/>
+    							<a href="">Media center </a></p>
+    						</div>
+	    					<div class="col-sm-2 programs">
+	    						<h5>OUR PROGRAMS  <br/> <br/> </h5>
+    							<p><a href="">Hike The Hill  </a> <br/> 
+    							<a href="">Volunteer Vacations </a><br/>
+    							<a href="">Alternative Break </a></p>
+	    					</div>
+	    					<div class="col-sm-2 trails">
+    							<h5>SUPPORT TRAILS <br/> <br/> </h5>
+    							<p><a href="">Donate </a> <br/> 
+    							<a href="">Individual Membership </a><br/>
+    							<a href="">Gift membership </a><br/>
+    							<a href="">Hiker Store </a></p>
+    						</div>
+	    					<div class="col-sm-3 resources">
+    							<h5>HIKING RESOURCES <br/> <br/> </h5>
+    							<p><a href="">Hikes Near You</a> <br/> 
+    							<a href="">Hiking 101</a><br/>
+    							<a href="">Muncak Blog</a><br/>
+    							<a href="">Hiking Organizations</a></p>
+    						</div>
+    					</div>
+    				</div>
+    			</div>
+    		</div>
+    	</section>
+    	<footer class="footer-section">
+    		<div class="container">
+    			<div class="row">
+    				<div class="col-md-4">
+						<div class="social-icons">
+							<ul>
+								<li>
+									<a href=""><i class="fa fa-instagram"></i></a>
+								</li>
+								<li>
+									<a href=""><i class="fa fa-facebook"></i></a>
+								</li>
+								<li>
+									<a href=""><i class="fa fa-twitter"></i></a>
+								</li>
+							</ul>
+						</div>
+					</div>
+    			</div>
+    		</div>
+    	</footer>
     </section>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
