--- a/index.html
+++ b/index.html
@@ -185,22 +185,24 @@
     			</div>
     		</div>
     	</section>
-    	<section class="footer-widget">
+    	<section class="footer-widget footer-section">
     		<div class="container">
     			<div class="row">
-    				<div class="col-md-11">
+    				<div class="col-md-12">
     					<div class="inner-widget">
-    						<div class="col-sm-2 contact">
-    							<h5>CONTACT US <br/> <br/> </h5>
-    							<p>Muncak hiking society <br/>
-								8605 Second Ave. <br/>
-								Silver Spring, MD 20910 <br/> <br/>
-							 
-								Info@muncak.org <br/>
-								1-301-565-6704 (Main) <br/>
-								1-800-972-8608 (Toll-free)</p>
-    						</div>
-    						<div class="col-sm-2 about">
+    						<div class="col-md-3">
+                                <div class="contact">
+                                    <h5>CONTACT US <br/> <br/> </h5>
+                                    <p>Muncak hiking society <br/>
+                                    8605 Second Ave. <br/>
+                                    Silver Spring, MD 20910 <br/> <br/>
+                             
+                                    Info@muncak.org <br/>
+                                    1-301-565-6704 (Main) <br/>
+                                    1-800-972-8608 (Toll-free)</p>
+                                </div>
+                            </div>
+    						<div class="col-2 about">
     							<h5>ABOUT US <br/> <br/> </h5>
     							<p><a href="">Our Mission </a> <br/> 
     							<a href="">Our Team </a><br/>
@@ -208,20 +210,20 @@
     							<a href="">Financials </a><br/>
     							<a href="">Media center </a></p>
     						</div>
-	    					<div class="col-sm-2 programs">
+	    					<div class="col programs">
 	    						<h5>OUR PROGRAMS  <br/> <br/> </h5>
     							<p><a href="">Hike The Hill  </a> <br/> 
     							<a href="">Volunteer Vacations </a><br/>
     							<a href="">Alternative Break </a></p>
 	    					</div>
-	    					<div class="col-sm-2 trails">
+	    					<div class="col trails">
     							<h5>SUPPORT TRAILS <br/> <br/> </h5>
     							<p><a href="">Donate </a> <br/> 
     							<a href="">Individual Membership </a><br/>
     							<a href="">Gift membership </a><br/>
     							<a href="">Hiker Store </a></p>
     						</div>
-	    					<div class="col-sm-3 resources">
+	    					<div class="co-3 resources">
     							<h5>HIKING RESOURCES <br/> <br/> </h5>
     							<p><a href="">Hikes Near You</a> <br/> 
     							<a href="">Hiking 101</a><br/>
@@ -231,29 +233,26 @@
     					</div>
     				</div>
     			</div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="social-icons">
+                            <div class="col-md-3">
+                                <ul>
+                                    <li>
+                                        <a href=""><i class="fa fa-instagram"></i></a>
+                                    </li>
+                                    <li>
+                                        <a href=""><i class="fa fa-facebook"></i></a>
+                                    </li>                                <li>
+                                       <a href=""><i class="fa fa-twitter"></i></a>
+                                    </li>
+                                </ul>   
+                            </div>
+                        </div>
+                    </div>
+                </div>
     		</div>
     	</section>
-    	<footer class="footer-section">
-    		<div class="container">
-    			<div class="row">
-    				<div class="col-md-4">
-						<div class="social-icons">
-							<ul>
-								<li>
-									<a href=""><i class="fa fa-instagram"></i></a>
-								</li>
-								<li>
-									<a href=""><i class="fa fa-facebook"></i></a>
-								</li>
-								<li>
-									<a href=""><i class="fa fa-twitter"></i></a>
-								</li>
-							</ul>
-						</div>
-					</div>
-    			</div>
-    		</div>
-    	</footer>
     </section>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
