--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     			</div>
     			<div class="row">
     				<div class="col-md-4">
-    					<div class="card" style="width: 18rem;">
+    					<div class="card">
   							<img src="images/l1.png" class="card-img-top" alt="...">
 							<div class="card-body">
 							   	<h5 class="card-title">2,802 Miles of Trail to <br/> be Improved on <br/> International Trails Day</h5>
@@ -141,7 +141,7 @@
 						</div>
     				</div>
     				<div class="col-md-4">
-    					<div class="card" style="width: 18rem;">
+    					<div class="card">
   							<img src="images/l2.png" class="card-img-top" alt="...">
 							<div class="card-body">
 							   	<h5 class="card-title">Four Ways to Celebrate <br/> International Trails <br/> Day on a Bicycle</h5>
@@ -151,7 +151,7 @@
 						</div> 
     				</div>
     				<div class="col-md-4">
-    					<div class="card" style="width: 18rem;">
+    					<div class="card">
   							<img src="images/l3.png" class="card-img-top" alt="...">
 							<div class="card-body">
 							   	<h5 class="card-title">Millennials are the Future of our Trails</h5>
