--- a/index.html
+++ b/index.html
@@ -47,65 +47,73 @@
 		        </div>
 		    </div>
 		    <div class="banner">
-	        <div class="container">
-	          	<div class="row">
-	            	<div class="col-md-12">
-	              		<div class="banner-inner">
-	            	    	<h1>Let’s get the top <br/> of Mountain</h1>
-	               		 	<p>Here is the hiking information you need to decide <br/> if it is right for you, and to make it more interesting, <br/> enjoyable, and safe.</p>
-	                		<a href="" class="btn btn-info">Get Started</a>
-	              		</div>
-	            	</div>
-	          	</div>
+    	        <div class="container">
+    	          	<div class="row">
+    	            	<div class="col-md-12">
+    	              		<div class="banner-inner">
+    	            	    	<h1>Let’s get the top <br/> of Mountain</h1>
+    	               		 	<p>Here is the hiking information you need to decide <br/> if it is right for you, and to make it more interesting, <br/> enjoyable, and safe.</p>
+    	                		<a href="" class="btn btn-info">Get Started</a>
+    	              		</div>
+    	            	</div>
+    	          	</div>
+    	        </div>
 	        </div>
-	      </div>
     	</header>
     	<section class="envision">
     		<div class="container">
-    			<div class="row">
-    				<div class="col-md-12">
-    					<h1>We envision a world  where everyone <br/> has permanent access to a hiking trail</h1>
-    				</div>
-    			</div>
-    			<div class="row">
-    				<div class="col-md-4 offset-md-2">
-    					<div class="card">
-						  <div class="card-body">
-						    <h5 class="card-title">Advocate</h5>
-						    <p class="card-text">We work with Congress, Federal agencies, and <br/> partners on policy issues and legislation to ensure <br/> funding for trails, preservation of natural areas, and <br/>protection of the hiking experience.</p>
-						  </div>
-						</div>
-    				</div>
-    			</div>
-    			<div class="row">
-    				<div class="col-md-4 offset-md-6">
-    					<div class="card">
-						  <div class="card-body">
-						    <h5 class="card-title">Volunteer</h5>
-						    <p class="card-text">Trails don't maintain themselves. Individuals of <br/> any age and experience level can become trail <br/> stewards. Give back to the trails you love, meet <br/> new people, and enjoy the experience!</p>
-						  </div>
-						</div>
-    				</div>
-    			</div>
-    			<div class="row">
-    				<div class="col-md-4 offset-md-2">
-    					<div class="card">
-						  <div class="card-body">
-						    <h5 class="card-title">Explore</h5>
-						    <p class="card-text">Feel confident when you set out on your next <br/> trail adventure. Check out our free hiking <br/> resources like tips for hiking with families, gear <br/>checklists, finding the best trail for you.</p>
-						  </div>
-						</div>
-    				</div>
-    				<div class="col-md-4">
-    					<a class="btn btn-info" href="#">Learn More</a>
-    				</div>
-    			</div>
+    			<div class="col-8 offset-2">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h1>We envision a world  where everyone <br/> has permanent access to a hiking trail</h1>
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="card">
+                                  <div class="card-body">
+                                    <h5 class="card-title">Advocate</h5>
+                                    <p class="card-text">We work with Congress, Federal agencies, and <br/> partners on policy issues and legislation to ensure <br/> funding for trails, preservation of natural areas, and <br/>protection of the hiking experience.</p>
+                                  </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-12">
+                        <div class="row">
+                            <div class="col-md-6 offset-md-6">
+                                <div class="card">
+                                  <div class="card-body">
+                                    <h5 class="card-title">Volunteer</h5>
+                                    <p class="card-text">Trails don't maintain themselves. Individuals of <br/> any age and experience level can become trail <br/> stewards. Give back to the trails you love, meet <br/> new people, and enjoy the experience!</p>
+                                  </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-12">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="card">
+                                  <div class="card-body">
+                                    <h5 class="card-title">Explore</h5>
+                                    <p class="card-text">Feel confident when you set out on your next <br/> trail adventure. Check out our free hiking <br/> resources like tips for hiking with families, gear <br/>checklists, finding the best trail for you.</p>
+                                  </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <a class="btn btn-info" href="#">Learn More</a>
+                            </div>
+                        </div> 
+                    </div>        
+                </div>
     		</div>
     	</section>
     	<section class="support">
     		<div class="container">
     			<div class="row">
-    				<div class="col-md-12">
+    				<div class="col-md-12 text-center">
     					<h2>With the support of our members,  and partners, we've <br/> improved trail access for millions of people</h2>
     				</div>
     			</div>
@@ -124,43 +132,45 @@
     	</section>
     	<section class="protecting">
     		<div class="container">
-    			<div class="row">
-    				<div class="col-md-12">
-    					<h2>Protecting Trails: Current News and Issues</h2>
-    				</div>
-    			</div>
-    			<div class="row">
-    				<div class="col-md-4">
-    					<div class="card">
-  							<img src="images/l1.png" class="card-img-top" alt="...">
-							<div class="card-body">
-							   	<h5 class="card-title">2,802 Miles of Trail to <br/> be Improved on <br/> International Trails Day</h5>
-							    <p class="card-text">On June 2, 2018, people across <br/> the worldwill come together to <br/> collectively improve 2,802 miles of <br/> trail—the distance across the <br/> world—during International <br/> Trails Day. Muncak invites hikers, cyclists,…</p>
-							    <a href="#" class="btn btn-primary">Read More</a>
-							</div>
-						</div>
-    				</div>
-    				<div class="col-md-4">
-    					<div class="card">
-  							<img src="images/l2.png" class="card-img-top" alt="...">
-							<div class="card-body">
-							   	<h5 class="card-title">Four Ways to Celebrate <br/> International Trails <br/> Day on a Bicycle</h5>
-							    <p class="card-text">There are many ways to <br/> celebrate the International Trails <br/> Day on June 2. It’s even possible <br/> to participate on a bicycle. And if <br/> you go on a bike overnight trip <br/> during International Trails <br/> Dayyou will simultaneously…</p>
-							    <a href="#" class="btn btn-primary">Read More</a>
-							</div>
-						</div> 
-    				</div>
-    				<div class="col-md-4">
-    					<div class="card">
-  							<img src="images/l3.png" class="card-img-top" alt="...">
-							<div class="card-body">
-							   	<h5 class="card-title">Millennials are the Future of our Trails</h5>
-							    <p class="card-text">The smell of fresh dew is a <br/> welcome scent, as the crunch of <br/> my boots melds with the sound of <br/> the birds singing their morning <br/> song. It’s early and I am wearing <br/> layers, but it won’t be long until <br/> they are peeled away to adapt to <br/> the summer…</p>
-							    <a href="#" class="btn btn-primary">Read More</a>
-							</div>
-						</div>
-    				</div> 
-    			</div>
+    			<div class="col-10 offset-1">
+                    <div class="row">
+        				<div class="col-md-10 offset-md-1">
+        					<h2>Protecting Trails: Current News and Issues</h2>
+        				</div>
+        			</div>
+        			<div class="row">
+        				<div class="col-md-4 col-lg-4">
+        					<div class="card">
+      							<img src="images/l1.png" class="card-img-top" alt="...">
+    							<div class="card-body">
+    							   	<h5 class="card-title">2,802 Miles of Trail to <br/> be Improved on <br/> International Trails Day</h5>
+    							    <p class="card-text">On June 2, 2018, people across <br/> the worldwill come together to <br/> collectively improve 2,802 miles of <br/> trail—the distance across the <br/> world—during International <br/> Trails Day. Muncak invites hikers, <br/> cyclists,…</p>
+    							    <a href="#" class="btn btn-primary">Read More</a>
+    							</div>
+    						</div>
+        				</div>
+        				<div class="col-md-4 col-lg-4">
+        					<div class="card">
+      							<img src="images/l2.png" class="card-img-top" alt="...">
+    							<div class="card-body">
+    							   	<h5 class="card-title">Four Ways to Celebrate <br/> International Trails <br/> Day on a Bicycle</h5>
+    							    <p class="card-text">There are many ways to <br/> celebrate the International Trails <br/> Day on June 2. It’s even possible <br/> to participate on a bicycle. And if <br/> you go on a bike overnight trip <br/> during International Trails <br/> Dayyou will simultaneously…</p>
+    							    <a href="#" class="btn btn-primary">Read More</a>
+    							</div>
+    						</div> 
+        				</div>
+        				<div class="col-md-4 col-lg-4">
+        					<div class="card">
+      							<img src="images/l3.png" class="card-img-top" alt="...">
+    							<div class="card-body">
+    							   	<h5 class="card-title">Millennials are the Future of our Trails</h5>
+    							    <p class="card-text">The smell of fresh dew is a <br/> welcome scent, as the crunch of <br/> my boots melds with the sound of <br/> the birds singing their morning <br/> song. It’s early and I am wearing <br/> layers, but it won’t be long until <br/> they are peeled away to adapt to <br/> the summer…</p>
+    							    <a href="#" class="btn btn-primary">Read More</a>
+    							</div>
+    						</div>
+        				</div> 
+        			</div>
+                </div>
     		</div>
     	</section>
     	<section class="receive">
