--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		        <div class="container">
 		          	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 			            <a class="navbar-brand" href="index.html">
-			              <img src="images/logo.png" alt="#">
+			              <img src="images/logo.png" alt="#" width="140px">
 			            </a>
 			            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			              <span class="navbar-toggler-icon"></span>
@@ -49,7 +49,7 @@
 		    <div class="banner">
     	        <div class="container">
     	          	<div class="row">
-    	            	<div class="col-md-12">
+    	            	<div class="col-md-6 offset-md-1">
     	              		<div class="banner-inner">
     	            	    	<h1>Let’s get the top <br/> of Mountain</h1>
     	               		 	<p>Here is the hiking information you need to decide <br/> if it is right for you, and to make it more interesting, <br/> enjoyable, and safe.</p>
@@ -70,7 +70,7 @@
                     </div>
                     <div class="col-12">
                         <div class="row">
-                            <div class="col-md-6">
+                            <div class="col-6">
                                 <div class="card">
                                   <div class="card-body">
                                     <h5 class="card-title">Advocate</h5>
@@ -82,7 +82,7 @@
                     </div>
                     <div class="col-md-12">
                         <div class="row">
-                            <div class="col-md-6 offset-md-6">
+                            <div class="col-6 offset-md-6">
                                 <div class="card">
                                   <div class="card-body">
                                     <h5 class="card-title">Volunteer</h5>
