--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
                             <h1>We envision a world  where everyone <br/> has permanent access to a hiking trail</h1>
                         </div>
                     </div>
-                    <div class="col-12">
+                    <div class="col-md-12">
                         <div class="row">
-                            <div class="col-6">
+                            <div class="col-md-6">
                                 <div class="card">
                                   <div class="card-body">
                                     <h5 class="card-title">Advocate</h5>
@@ -82,7 +82,7 @@
                     </div>
                     <div class="col-md-12">
                         <div class="row">
-                            <div class="col-6 offset-md-6">
+                            <div class="col-md-6 offset-md-6">
                                 <div class="card">
                                   <div class="card-body">
                                     <h5 class="card-title">Volunteer</h5>
